// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен отредерить описание без бейджей, если есть только описание 1`] = `
<div
  className="CardDescription"
>
  <a
    className="CardDescription__anchor"
    name="card-description"
  />
  <h2
    className="CardDescription__title"
  >
    Комментарий продавца
  </h2>
  <div
    className="CardDescription__text"
  >
    <div
      className="CardDescription__textInner"
    >
      <Memo(CardDescriptionHTML)
        description="test"
      />
    </div>
  </div>
</div>
`;

exports[`должен отредерить описание с бейджами, если все есть 1`] = `
<div
  className="CardDescription CardDescription_withBadges"
>
  <a
    className="CardDescription__anchor"
    name="card-description"
  />
  <h2
    className="CardDescription__title"
  >
    Комментарий продавца
  </h2>
  <div
    className="CardDescription__badges"
  >
    <div
      className="CardDescription__badgesItem"
      key="0"
    >
      badge
    </div>
  </div>
  <div
    className="CardDescription__text"
  >
    <div
      className="CardDescription__textInner"
    >
      <Memo(CardDescriptionHTML)
        description="test"
      />
    </div>
  </div>
</div>
`;
